video overlap by navbar fixed

--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -54,6 +54,8 @@
 
 .tourVideoContainer {
   position: fixed;
+  z-index: 20;
+  padding: 5rem;
   inset: 0px;
   display: flex;
   justify-content: center;
@@ -71,6 +73,8 @@
   }
   iframe {
     border-radius: 20px;
+    width: 1120px;
+    height: 699px;
   }
 }
 
